# dgraph-cli

./: Cargo.toml  LICENSE.md  README.md  docker-compose.yml
src/: app.rs  config.rs  dgraph_client.rs  error.rs  file.rs  main.rs  query.rs  schema.rs
src/commands/: config.rs  mod.rs  query.rs  schema.rs
